--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.9)
 
-project(msos NONE)
+project(msos_path NONE)
 
 include(cmake/GitModules.cmake)
 fetch_module_via_branch(lib/hal ${PROJECT_SOURCE_DIR}/lib/hal ${CMAKE_CURRENT_SOURCE_DIR} "master")
 
+project (msos ASM C CXX)
 add_library(msos INTERFACE)
 
 target_link_libraries(msos
