some debug fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,20 @@
 cmake_minimum_required(VERSION 3.9)
 
-project(msos_path NONE)
+project(msos NONE)
 
 include(cmake/GitModules.cmake)
+
 fetch_module_via_branch(lib/hal ${PROJECT_SOURCE_DIR}/lib/hal ${CMAKE_CURRENT_SOURCE_DIR} "master")
 
-project (msos ASM C CXX)
+message ("MSOS1: ${CMAKE_EXECUTABLE_SUFFIX}")
+set(CMAKE_EXECUTABLE_SUFFIX "${CMAKE_EXECUTABLE_SUFFIX}")
+message ("MSOS2: ${CMAKE_EXECUTABLE_SUFFIX}")
+
+include (SetCompilationSystem)
+set_compilation_target()
+
+enable_language(ASM C CXX)
+
 add_library(msos INTERFACE)
 
 target_link_libraries(msos
