--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(msos NONE)
 include(cmake/GitModules.cmake)
 
 fetch_module_via_branch(lib/hal ${PROJECT_SOURCE_DIR}/lib/hal ${CMAKE_CURRENT_SOURCE_DIR} "master")
+fetch_module_via_branch(lib/msgui ${PROJECT_SOURCE_DIR}/lib/msgui ${CMAKE_CURRENT_SOURCE_DIR} "master")
 
 set(CMAKE_EXECUTABLE_SUFFIX "${CMAKE_EXECUTABLE_SUFFIX}")
 
@@ -15,7 +16,16 @@ enable_language(ASM C CXX)
 
 add_library(msos INTERFACE)
 
+add_subdirectory(include/msos/drivers)
+
 target_link_libraries(msos
     INTERFACE
         hal
+        msos_drivers
+        msgui
+)
+
+target_include_directories(msos
+    INTERFACE
+        ${PROJECT_SOURCE_DIR}/include
 )
