--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project(msos NONE)
 
 include(cmake/GitModules.cmake)
 
+set (user_boards_path ${PROJECT_SOURCE_DIR}/boards CACHE STRING "Path to boards provided from user" FORCE)
+add_definitions("-DGSL_TERMINATE_ON_CONTRACT_VIOLATION=1 -DGSL_MSVC_USE_STL_NOEXCEPTION_WORKAROUND=1")
+
 fetch_module_via_branch(lib/hal ${PROJECT_SOURCE_DIR}/lib/hal ${CMAKE_CURRENT_SOURCE_DIR} "master")
 fetch_module_via_branch(lib/msgui ${PROJECT_SOURCE_DIR}/lib/msgui ${CMAKE_CURRENT_SOURCE_DIR} "master")
 
@@ -14,18 +17,5 @@ set_compilation_target()
 
 enable_language(ASM C CXX)
 
-add_library(msos INTERFACE)
-
 add_subdirectory(include/msos/drivers)
-
-target_link_libraries(msos
-    INTERFACE
-        hal
-        msos_drivers
-        msgui
-)
-
-target_include_directories(msos
-    INTERFACE
-        ${PROJECT_SOURCE_DIR}/include
-)
+add_subdirectory(src)
