--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,23 +1,27 @@
 set (target_name "msos")
 
-add_executable(${target_name})
+add_executable(msos)
 
-target_sources(${target_name}
-    PRIVATE
+target_sources(msos
+    PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
 )
 
-target_link_libraries(${target_name}
+add_library(aaa INTERFACE)
+target_link_libraries(aaa INTERFACE hal_stm32_common)
+
+target_link_libraries(msos
     PUBLIC
         hal
-        msos_drivers
-        msgui
+        #msos_drivers
+        #        msgui
+        aaa
 )
 
 include (GenerateBinary)
 generate_binary(${target_name} ${vendor})
 
-target_include_directories(${target_name}
+target_include_directories(msos
     PUBLIC
         ${PROJECT_SOURCE_DIR}/include
 )
