some fixes in generator script

--- a/src/modules/example/CMakeLists.txt
+++ b/src/modules/example/CMakeLists.txt
@@ -37,7 +37,7 @@ add_custom_target(
 add_custom_command(
     TARGET example_module_wrapper_generator
     POST_BUILD
-    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/venv/bin/python3 ${PROJECT_SOURCE_DIR}/scripts/generate_binary.py
+    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/venv/bin/python3 ${PROJECT_SOURCE_DIR}/scripts/generate_wrappers.py
     generate_wrapper_code --output ${PROJECT_BINARY_DIR}/example_module_wrapper --input
     ${PROJECT_BINARY_DIR}/src/modules/example/CMakeFiles/example_module.dir --objcopy=${CMAKE_OBJCOPY}
     --module_name=example_module
@@ -48,8 +48,8 @@ add_library(example_module_wrapper OBJECT)
 
 set_source_files_properties(${PROJECT_BINARY_DIR}/example_module_wrapper/wrapped_symbols.s PROPERTIES GENERATED 1)
 
-target_sources(example_module_wrapper 
-    PRIVATE 
+target_sources(example_module_wrapper
+    PRIVATE
     ${PROJECT_BINARY_DIR}/example_module_wrapper/wrapped_symbols.s
 )
 add_dependencies(example_module_wrapper example_module_wrapper_generator)
@@ -59,7 +59,7 @@ target_compile_options(example_module_wrapper PUBLIC -msingle-pic-base -fno-inli
 target_link_options(example_module_wrapper PUBLIC -T${PROJECT_SOURCE_DIR}/linker_scripts/dynamic_module.ld
     -nostartfiles -nodefaultlibs -nostdlib -Wl,--unresolved-symbols=ignore-in-object-files -Wl,--emit-relocs)
 
-add_library(example_module_shared SHARED)
+add_executable(example_module_shared)
 
 target_link_libraries(example_module_shared
     PUBLIC
@@ -74,3 +74,11 @@ target_link_libraries(example_module_shared
 target_compile_options(example_module_shared PUBLIC
     "${hal_compilation_flags};-msingle-pic-base;-fno-inline;-fPIE;-mno-pic-data-is-text-relative")
 target_link_options(example_module_shared PUBLIC -T${PROJECT_SOURCE_DIR}/linker_scripts/dynamic_module.ld -nostartfiles -nodefaultlibs -nostdlib -Wl,--unresolved-symbols=ignore-in-object-files -Wl,--emit-relocs)
+
+add_custom_command(
+    TARGET example_module_shared
+    POST_BUILD
+    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/venv/bin/python3 ${PROJECT_SOURCE_DIR}/scripts/generate_binary.py
+    generate_wrapper_code --elf_filename=$<TARGET_FILE:example_module_shared> --module_name=example_module
+    VERBATIM
+)
