fixes for dynamic memory allocation

--- a/src/modules/example/CMakeLists.txt
+++ b/src/modules/example/CMakeLists.txt
@@ -8,10 +8,10 @@ target_sources(example_module
 
 set (module_linker_flags "${hal_linker_flags};-T${PROJECT_SOURCE_DIR}/linker_scripts/dynamic_module.ld;-nostartfiles;-nodefaultlibs;-nostdlib;-Wl,--unresolved-symbols=ignore-in-object-files;-Wl,--emit-relocs")
 set (module_compiler_flags
-    "${hal_compilation_flags};-msingle-pic-base;-fno-inline;-fPIE;-mno-pic-data-is-text-relative;-fomit-frame-pointer;-fno-inline;-mlong-calls")
+    "${hal_cxx_compilation_flags};-msingle-pic-base;-fno-inline;-fPIE;-mno-pic-data-is-text-relative;-fomit-frame-pointer;-fno-inline;-mlong-calls")
 
 
-target_compile_options(example_module PUBLIC ${module_compiler_flags}) 
+target_compile_options(example_module PUBLIC ${module_compiler_flags})
 target_link_options(example_module PUBLIC ${module_linker_flags})
 
 find_program(VIRTUALENV virtualenv)
@@ -59,7 +59,7 @@ target_sources(example_module_wrapper
 )
 add_dependencies(example_module_wrapper example_module_wrapper_generator)
 
-target_compile_options(example_module_wrapper PUBLIC ${hal_compilation_flags} -x assembler-with-cpp) 
+target_compile_options(example_module_wrapper PUBLIC ${hal_cxx_compilation_flags} -x assembler-with-cpp)
 target_link_options(example_module_wrapper PUBLIC ${module_linker_flags})
 
 add_executable(example_module_shared)
@@ -71,7 +71,7 @@ target_link_libraries(example_module_shared
 )
 
 target_compile_options(example_module_shared PUBLIC ${module_compiler_flags})
-target_link_options(example_module_shared PUBLIC ${module_linker_flags})    
+target_link_options(example_module_shared PUBLIC ${module_linker_flags})
 
 add_custom_command(
     TARGET example_module_shared
