--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/msgui"]
 	path = lib/msgui
 	url = https://github.com/matgla/MsGui.git
+[submodule "lib/gsl/gsl"]
+	path = lib/gsl/gsl
+	url = https://github.com/microsoft/GSL.git
