--- a/src/dynamic_linker/CMakeLists.txt
+++ b/src/dynamic_linker/CMakeLists.txt
@@ -5,16 +5,25 @@ set (library_includes ${PROJECT_SOURCE_DIR}/include/msos/dynamic_linker)
 target_sources(msos_dynamic_linker
     PUBLIC
         ${library_includes}/dynamic_linker.hpp
-        ${library_includes}/symbol.hpp
-        ${library_includes}/relocation.hpp
-        ${library_includes}/module.hpp
         ${library_includes}/environment.hpp
+        ${library_includes}/executable_module.hpp
+        ${library_includes}/library_module.hpp
+        ${library_includes}/module.hpp
+        ${library_includes}/module_data.hpp 
+        ${library_includes}/module_header.hpp
+        ${library_includes}/relocation.hpp
+        ${library_includes}/symbol.hpp
 
     PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/dynamic_linker.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/symbol.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/relocation.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/executable_module.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/library_module.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/loaded_module.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/module.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/module_data.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/module_header.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/relocation.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/symbol.cpp
 )
 
 target_include_directories(msos_dynamic_linker
