fixes for working, I have to do something with this memory allocation

--- a/src/dynamic_linker/CMakeLists.txt
+++ b/src/dynamic_linker/CMakeLists.txt
@@ -6,18 +6,15 @@ target_sources(msos_dynamic_linker
     PUBLIC
         ${library_includes}/dynamic_linker.hpp
         ${library_includes}/environment.hpp
-        ${library_includes}/executable_module.hpp
-        ${library_includes}/library_module.hpp
+        ${library_includes}/loaded_module.hpp
         ${library_includes}/module.hpp
-        ${library_includes}/module_data.hpp 
+        ${library_includes}/module_data.hpp
         ${library_includes}/module_header.hpp
         ${library_includes}/relocation.hpp
         ${library_includes}/symbol.hpp
 
     PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/dynamic_linker.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/executable_module.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/library_module.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/loaded_module.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/module.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/module_data.cpp
