Fixes in build system, reduced recompilation times

--- a/test/st/CMakeLists.txt
+++ b/test/st/CMakeLists.txt
@@ -1,23 +1,28 @@
 find_program (virtualenv_exec virtualenv)
+
 if (NOT virtualenv_exec)
     message(FATAL_ERROR "Couldn't find virtualenv")
 endif ()
 
 set(virtualenv_exec ${virtualenv_exec} -p python3)
 
-add_custom_command(
-    OUTPUT virtualenv_command
-    COMMAND ${virtualenv_exec} system_tests_env
-)
+find_file (ST_TESTS_VIRTUALENV_FILE test_st_venv.stamp ${PROJECT_BINARY_DIR}/)
+if (${ST_TESTS_VIRTUALENV_FILE} STREQUAL ST_TESTS_VIRTUALENV_FILE-NOTFOUND)
+    execute_process(
+        COMMAND ${virtualenv_exec} system_tests_env 
+    )
+    file (TOUCH ${PROJECT_BINARY_DIR}/test_st_venv.stamp)
+    find_file (ST_TESTS_VIRTUALENV_FILE test_st_venv.stamp ${PROJECT_BINARY_DIR}/)
+endif ()
 
 add_custom_command(
     OUTPUT system_tests_env.stamp
-    DEPENDS virtualenv_command ${PROJECT_SOURCE_DIR}/test/st/requirements.txt
-    COMMAND ./system_tests_env/bin/pip install -r ${PROJECT_SOURCE_DIR}/test/st/requirements.txt --upgrade
+    DEPENDS ${ST_TESTS_VIRTUALENV_FILE} ${PROJECT_SOURCE_DIR}/test/st/requirements.txt
+    COMMAND ${PROJECT_BINARY_DIR}/system_tests_env/bin/pip install -r ${PROJECT_SOURCE_DIR}/test/st/requirements.txt --upgrade
 )
 
 add_custom_target(run_st
-    COMMAND ./system_tests_env/bin/py.test ${PROJECT_SOURCE_DIR}/test/st
+    COMMAND ${PROJECT_BINARY_DIR}/system_tests_env/bin/py.test ${PROJECT_SOURCE_DIR}/test/st
     DEPENDS system_tests_env.stamp
     VERBATIM
 )
