--- a/test/st/dynamic_linker/tests/simple_single_module/CMakeLists.txt
+++ b/test/st/dynamic_linker/tests/simple_single_module/CMakeLists.txt
@@ -1,26 +1,27 @@
-add_library(simple_module OBJECT)
+add_library(simple_module_library OBJECT)
 
-target_sources(simple_module
+target_sources(simple_module_library
     PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
 )
 
-target_link_libraries(simple_module
+target_link_libraries(simple_module_library
     PRIVATE 
         module_flags
 )
 
-add_wrapper(simple_module)
+add_module(simple_module simple_module_library)
 
+add_dependencies(simple_module host)
 add_custom_target(
-    concat_binaries 
-    DEPENDS host_resize ${CMAKE_CURRENT_BINARY_DIR}/simple_module_generate_bin.stamp
+    simple_module_generate_test_image
     COMMAND cat ${HOST_BINARY_FILE} ${CMAKE_CURRENT_BINARY_DIR}/simple_module.bin >
     ${CMAKE_CURRENT_BINARY_DIR}/test_binary.bin 
+    DEPENDS host simple_module
     VERBATIM 
 )
 
-add_dependencies(concat_binaries simple_module)
+set (run_st_deps "${run_st_deps}" simple_module_generate_test_image CACHE INTERNAL "")
 
 list(FIND BINARIES_FOR_ST "simple_module:${CMAKE_CURRENT_BINARY_DIR}/test_binary.bin" test_in_list)
 
@@ -29,5 +30,4 @@ if (${test_in_list} EQUAL -1)
     set(BINARIES_FOR_ST "${BINARIES_FOR_ST}" "simple_module:${CMAKE_CURRENT_BINARY_DIR}/test_binary.bin" CACHE INTERNAL "")
 endif()
 
-add_dependencies(generate_config_file concat_binaries)
 
