fixed bug in header size calculation

--- a/test/st/CMakeLists.txt
+++ b/test/st/CMakeLists.txt
@@ -29,6 +29,8 @@ set(BINARIES_FOR_ST "" CACHE INTERNAL "")
 
 add_custom_target(generate_config_file)
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
 add_subdirectory(dynamic_linker)
 
 add_custom_command(
