--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,6 +13,8 @@ jobs:
         sudo apt install hugo
     - name: Checkout
       uses: actions/checkout@v1
+    - name: Fetch submodules
+         git submodule update --init
     - name: Generate website
       run: |
         make page 
