--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,6 +14,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
     - name: Fetch submodules
+      run: |
          git submodule update --init
     - name: Generate website
       run: |
