other hugo fetch method

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,9 @@
 name: CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -10,7 +13,13 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
-        sudo apt install hugo
+        curl -s https://api.github.com/repos/gohugoio/hugo/releases/latest \
+           | grep  browser_download_url \
+           | grep Linux-64bit.deb \
+           | grep -v extended \
+           | cut -d '"' -f 4 \
+           | wget -i -
+         sudo dpkg -i hugo*_Linux-64bit.deb
     - name: Checkout
       uses: actions/checkout@v1
     - name: Fetch submodules
