--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,6 +31,6 @@ jobs:
     - name: Publish page to gh-pages
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_PRIVATE_TOKEN }}
         BRANCH: gh-pages
         FOLDER: site
